<resources>
    <string name="app_name">FoodOrderingV2.0</string>
    <string name="a_verification_code_will_send_to_you_phone_number">A verification Code Will Send to You Phone Number</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>

    <string name="register">Register</string>

    <string name="yourName">Your Name</string>

    <string name="email">Email Address</string>

    <string name="password">Password</string>

    <string name="confirm">Confirm Password</string>

    <string name="welcome">Welcome back!</string>

    <string name="signin">Sign in Now!</string>

    <string name="hungry">------ Hungry? -------</string>

    <string name="startOrder">Start Your Order Now!</string>

    <string name="mostSellers">Most Sellers!</string>

    <string name="signup">No Account? Sign Up Here</string>
    <string name="title_activity_home_demo">HomeDemoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="addToCart">Add to Cart</string>

    <string name="beginOrder">Begin to Order</string>

    <string name="hint">Press to show details</string>

    <string name="confirmOrder">Confirm Your Order</string>

    <string-array name="category">
        <item>All category</item>
        <item>Porridge</item>
        <item>Hot Dishes</item>
        <item>Cold Dishes</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="no_item_yet">No Item Yet</string>
    <string name="total_0">Total $0</string>
    <string name="food_name">Food Name</string>
    <string name="food_description">Food Description</string>
    <string name="confirm_your_order">Confirm Your Order</string>
    <string name="detail_confirm">Detail Confirm</string>
    <string name="price_confirm">Price Confirm</string>
    <string name="food_confirm">Food Confirm</string>
    <string name="start_new_order">Start New Order</string>
    <string name="_65">+65</string>
</resources>
