<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvDetailConfirm"
        android:id="@+id/tvFoodConfirm"
        android:text="@string/food_confirm"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvPriceConfirm"
        app:layout_constraintRight_toLeftOf="@+id/tvFoodConfirm"
        android:id="@+id/tvDetailConfirm"
        android:text="@string/detail_confirm"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvDetailConfirm"
        android:id="@+id/tvPriceConfirm"
        android:text="@string/price_confirm"
        android:layout_margin="8dp"/>

</android.support.constraint.ConstraintLayout>